<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <FrameLayout
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="282dp"
                android:layout_height="30dp">
                <EditText
                    android:id="@+id/search_input"
                    android:drawableLeft="@mipmap/search_icon_seach"
                    android:background="@mipmap/search_icon_seachframe_bg"
                    android:hint="@string/hintText"
                    android:imeOptions="actionSearch"
                    android:textColorHint="#CCCCCC"
                    android:textSize="13sp"
                    android:layout_width="282dp"
                    android:layout_height="30dp"/>
                <ImageView
                    android:id="@+id/delete"
                    android:visibility="gone"
                    android:layout_marginTop="5dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/delete_icon"
                    android:layout_marginLeft="258dp"
                    />
            </FrameLayout>
            <Button
                android:id="@+id/search_btn"
                android:background="@drawable/searchbtn"
                android:enabled="false"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="7dp"
                android:textColor="@color/colorText"
                android:text="@string/search"
                android:textSize="14sp"
                android:layout_width="45dp"
                android:layout_height="30dp"/>
        </LinearLayout>
    <ListView
        android:id="@+id/recycle_hint"
        android:layout_width="260dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:background="@color/colorMain"
        android:visibility="gone"></ListView>
   <android.support.v7.widget.RecyclerView
            android:layout_marginTop="50dp"
            android:id="@+id/recycle_result"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
   </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/hot_label"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="66dp"
            android:textSize="14sp"
            android:textColor="@color/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotsearch"
            />
<com.example.cleverlin.cate.view.FlowLayout
    android:layout_marginTop="12dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="20dp"
    android:id="@+id/flowlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
</com.example.cleverlin.cate.view.FlowLayout>
<LinearLayout
    android:layout_marginTop="16dp"
    android:layout_marginLeft="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/history_tv"
        android:textSize="14sp"
        android:text="@string/history_search"
        android:textColor="@color/colorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/clear_history"
        android:background="@drawable/shape_corner_button2"
        android:textColor="@color/colorText"
        android:layout_marginLeft="170dp"
        android:text="@string/clearhistory"
        android:layout_width="105dp"
        android:layout_height="30dp"/>
</LinearLayout>
        <ListView
            android:id="@+id/history_record"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>