<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_person"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cleverlin.cate.activity.PersonActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/personal_bg"
            android:layout_width="match_parent"
            android:layout_height="320dp"/>
        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="47dp"
            android:layout_marginTop="182dp"
            android:text="@string/yesterdayTakein"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            />
        <com.example.cleverlin.cate.view.CircleProgressView
            android:id="@+id/yesterday_calorie"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="20dp"
            android:layout_width="90dp"
            android:layout_height="90dp"/>
        <TextView
            android:textSize="18sp"
            android:text="今日还可摄入"
            android:layout_marginTop="115dp"
            android:layout_marginLeft="130dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.example.cleverlin.cate.view.CircleProgressView
            android:id="@+id/today_calorie"
            android:layout_marginTop="76dp"
            android:layout_marginLeft="105dp"
            android:layout_width="160dp"
            android:layout_height="160dp"/>
        <TextView
            android:textSize="18sp"
            android:text="大卡"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="18sp"
            android:layout_marginLeft="290dp"
            android:layout_marginTop="182dp"
            android:text="@string/weekTakein"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            />
        <com.example.cleverlin.cate.view.CircleProgressView
            android:id="@+id/week_calorie"
            android:layout_marginTop="160dp"
            android:layout_marginLeft="260dp"
            android:layout_width="90dp"
            android:layout_height="90dp"/>
        <TextView
            android:id="@+id/hintText"
            android:gravity="center"
            android:textSize="20sp"
            android:text="今日摄入热量太少啦！"
            android:layout_marginTop="260dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="28dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:onClick="onViewClicked"
                android:layout_marginLeft="49dp"
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="wrap_content">
                <ImageButton
                    android:src="@mipmap/personal_icon_recipe"
                    android:background="@color/transparent"
                    android:id="@+id/suggest_menu"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/suggest_menuTv"
                    android:gravity="center"
                    android:text="@string/suggest_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="100dp"
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="wrap_content">
                <ImageButton
                    android:id="@+id/change_calorie"
                    android:src="@mipmap/personal_icon_alter"
                    android:background="@color/transparent"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                <TextView
                    android:id="@+id/change_calorieTv"
                    android:gravity="center"
                    android:text="@string/change_calorie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_marginLeft="49dp"
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/calculator_calorie"
                android:src="@mipmap/personal_icon_calculator"
                android:background="@color/transparent"
                android:layout_width="80dp"
                android:layout_height="80dp"/>
            <TextView
                android:id="@+id/calculator_calorieTv"
                android:gravity="center"
                android:text="@string/calculator_calorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_marginLeft="100dp"
                android:orientation="vertical"
                android:layout_width="80dp"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/record_eat"
                    android:src="@mipmap/personal_icon_record"
                    android:background="@color/transparent"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:id="@+id/record_eatTv"
                    android:gravity="center"
                    android:text="@string/record_eat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
