<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@mipmap/login_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.cleverlin.cate.activity.LoginActivity">


    <ImageView
        android:layout_marginTop="151dp"
        android:layout_marginLeft="20dp"
        android:layout_width="115dp"
        android:layout_height="26dp"
        android:src="@mipmap/login_logo"
        />

    <LinearLayout
        android:layout_marginTop="61dp"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_marginLeft="20dp"
            android:id="@+id/username"
            android:layout_width="318dp"
            android:layout_height="match_parent"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
            android:layout_marginLeft="20dp"
            android:id="@+id/password"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>




    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_marginTop="44dp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/register"
            android:layout_marginLeft="73dp"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:background="@mipmap/login_btn_register"
            android:layout_gravity="center"
            />
        </RelativeLayout>
        <RelativeLayout
            android:layout_marginTop="44dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/login"
                android:layout_marginLeft="70dp"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@mipmap/login_btn_login"
                android:layout_gravity="center"
                />
        </RelativeLayout>



    </LinearLayout>

</LinearLayout>
