<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cleverlin.cate.activity.SingleSearchActivity"
    android:orientation="vertical">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:background="@color/colorMain"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <ImageButton
            android:id="@+id/returnAct"
            android:background="@color/transparent"
            android:src="@mipmap/nav_return"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_width="24dp"
            android:layout_height="24dp"/>
        <EditText
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:id="@+id/simple_search"
            android:drawableLeft="@mipmap/search_icon_seach"
            android:background="@mipmap/search_icon_seachframe_bg"
            android:hint="@string/hintText"
            android:imeOptions="actionSearch"
            android:textColorHint="#CCCCCC"
            android:textSize="13sp"
            android:layout_width="286dp"
            android:layout_height="30dp"/>
<ImageButton
    android:background="@color/transparent"
    android:src="@mipmap/nav_confirm"
    android:id="@+id/finish"
    android:visibility="gone"
    android:layout_marginRight="20dp"
    android:layout_gravity="right"
    android:layout_marginTop="13dp"
    android:layout_width="24dp"
    android:layout_height="24dp"/>

    </FrameLayout>
    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:background="@color/colorMain"
        android:layout_marginTop="-9dp"
        android:layout_marginLeft="74dp"
        android:layout_marginRight="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
    <RelativeLayout
        android:id="@+id/layout_food"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:background="@drawable/stroke_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:src="@mipmap/ic_launcher"
            android:id="@+id/single_photo"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <TextView
            android:layout_toRightOf="@+id/single_photo"
            android:layout_centerVertical="true"
            android:id="@+id/single_name"
            android:text="吐司"
            android:textSize="25sp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_toLeftOf="@id/textview3"
            android:id="@+id/single_calorie"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            android:textSize="20sp"/>
        <TextView
            android:layout_centerVertical="true"
            android:id="@+id/textview3"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:text="大卡"
            android:layout_height="wrap_content"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_number"
        android:visibility="gone"
        android:background="@drawable/stroke_layout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_centerVertical="true"
            android:text="@string/number"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:background="@color/transparent"
            android:src="@mipmap/calculator_btn_more"
            android:id="@+id/number_food"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="12dp"
            android:layout_height="24dp"/>
        <TextView
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/number_food"
            android:text="1"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_unit"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:background="@drawable/stroke_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">


        <TextView
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:layout_centerVertical="true"
            android:text="个"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/food_unit"/>

        <TextView
            android:text="@string/unit"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/food_unit"
            android:layout_alignBottom="@+id/food_unit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/layout_when"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:background="@drawable/stroke_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_centerVertical="true"
            android:text="@string/addto"
            android:layout_marginLeft="20dp"
            android:textSize="16sp"
            android:textColor="@color/colorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:background="@color/transparent"
            android:src="@mipmap/calculator_btn_more"
            android:id="@+id/when"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_width="12dp"
            android:layout_height="24dp"/>
        <TextView
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/when"
            android:text="@string/breakfast"
            android:textColor="@color/colorText"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
</LinearLayout>
